// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action Group With Defaults 2 renders an Action Group with defaults and checks snapshot 1`] = `
"{
  "output": {
    "id": {
      "value": "\${azurerm_monitor_action_group.testAzureActionGroupDefaults_actiongroup_ADD914FD.id}"
    }
  },
  "provider": {
    "azurerm": [
      {
        "features": {
        }
      }
    ]
  },
  "resource": {
    "azurerm_monitor_action_group": {
      "testAzureActionGroupDefaults_actiongroup_ADD914FD": {
        "enabled": false,
        "location": "global",
        "name": "testactiongroup",
        "resource_group_name": "\${azurerm_resource_group.testAzureActionGroupDefaults_rg_E07CD696.name}",
        "short_name": "testshortn",
        "tags": {
          "test": "test"
        }
      }
    },
    "azurerm_resource_group": {
      "testAzureActionGroupDefaults_rg_E07CD696": {
        "location": "global",
        "name": "rg-testactiongroup",
        "tags": {
          "test": "test"
        }
      }
    }
  },
  "terraform": {
    "required_providers": {
      "azurerm": {
        "source": "azurerm",
        "version": "3.70.0"
      }
    }
  }
}"
`;

exports[`Action Group With Defaults renders an Action Group with defaults and checks snapshot 1`] = `
"{
  "output": {
    "id": {
      "value": "\${azurerm_monitor_action_group.testAzureActionGroupDefaults_actiongroup_ADD914FD.id}"
    }
  },
  "provider": {
    "azurerm": [
      {
        "features": {
        }
      }
    ]
  },
  "resource": {
    "azurerm_monitor_action_group": {
      "testAzureActionGroupDefaults_actiongroup_ADD914FD": {
        "enabled": true,
        "location": "global",
        "name": "testactiongroup",
        "resource_group_name": "\${azurerm_resource_group.testAzureActionGroupDefaults_rg_E07CD696.name}",
        "short_name": "testshortn",
        "tags": {
        }
      }
    },
    "azurerm_resource_group": {
      "testAzureActionGroupDefaults_rg_E07CD696": {
        "location": "eastus",
        "name": "rg-testactiongroup"
      }
    }
  },
  "terraform": {
    "required_providers": {
      "azurerm": {
        "source": "azurerm",
        "version": "3.70.0"
      }
    }
  }
}"
`;
